--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -16,7 +16,7 @@
 			<div id="inner-wrap">	
 			    <header id="top">
 			        <div class="block">
-			            <a href="index.html"  id="logo"></a><!--Logo-->
+			            <a href="index.html"  id="logo"></a><!--Logo 1-->
 			            <a class="nav-btn" id="nav-open-btn" href="#nav">Book Navigation</a>
 						<div id="contact">
 							{% if request.user.is_authenticated %}
