--- a/friends_forlife/app/static/style/style.css
+++ b/friends_forlife/app/static/style/style.css
@@ -400,9 +400,9 @@ input[type="search"]::-webkit-search-decoration {
 	margin-bottom: 15px !important;
 }
 
-.searchDogs {
+/*.searchDogs {
 	margin-bottom: 50px;
-}
+}*/
     
 .adoptDogForm {
 	padding: 2%;
