Fixed login & Dogs_4_adoption

--- a/friends_forlife/app/templates/app/dogs_4_adoption.html
+++ b/friends_forlife/app/templates/app/dogs_4_adoption.html
@@ -184,7 +184,7 @@
 												</p>
 											</div>
 											<div class="col">
-												{%  if dog.is_childrens_friendly %}
+												{%  if dog.is_children_friendly %}
 												<p style="color:#2ecc71;">
 													ידידותי לילדים
 												</p>
