--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -24,7 +24,7 @@
                                     <button id="btnClick" class="based">מחובר למערכת</button>
                                 </div>
                                 <div id="loginBannerAfterClick" style="display:none;">
-                                    <form name="login" action="index_submit" method="get">
+                                    <form name="login" action="login_endpoint" method="post">
                                                 <input type="submit" value="כניסה">
                                                 <input type="password" name="password" placeholder="סיסמא" required>
                                                 <input type="text" name="usermail" placeholder="שם משתמש" required>
@@ -35,7 +35,7 @@
                                     <button id="btnClick" class="based">כניסה למערכת</button>
                                 </div>
                                 <div id="loginBannerAfterClick" style="display:none;">
-                                    <form name="login" action="index_submit" method="get">
+                                    <form name="login" action="login_endpoint" method="post">
                                                 <input type="submit" value="כניסה">
                                                 <input type="password" name="password" placeholder="סיסמא" required>
                                                 <input type="text" name="usermail" placeholder="שם משתמש" required>
