--- a/friends_forlife/app/templates/app/success_dogstaying_add.html
+++ b/friends_forlife/app/templates/app/success_dogstaying_add.html
@@ -61,7 +61,7 @@ class DogHouse(models.Model):
 							</div>
 
 							<div id="loginBannerAfterClick" style="display:none;">
-								<form name="login" action="index_submit" method="get">
+								<form name="login" action="login_endpoint" method="get">
 						        	<input type="text" name="usermail" placeholder="שם משתמש" required>
 						        	<input type="password" name="password" placeholder="סיסמא" required>
 						        	<input type="submit" value="כניסה">
